--- a/Informe/ej1/ej1.lyx
+++ b/Informe/ej1/ej1.lyx
@@ -12,7 +12,7 @@
 \usepackage{steinmetz}
 \usepackage{mathtools}
 \usepackage{placeins}
-\usepackage[textwidth=14cm]{geometry}	%texto ocupa mas ancho de pagina
+%\usepackage[textwidth=14cm]{geometry}	%texto ocupa mas ancho de pagina
 \usepackage{xcolor}		%se usa en \code
 
 \usepackage[american]{circuitikz}
@@ -41,6 +41,7 @@
 \definecolor{light-gray}{gray}{0.95} 
 \newcommand{\code}[1]{\colorbox{light-gray}{\texttt{#1}}}
 \end_preamble
+\options   ,textwidth=14cm
 \use_default_options true
 \maintain_unincluded_children false
 \language english
@@ -65,8 +66,8 @@
 \paperfontsize default
 \spacing single
 \use_hyperref false
-\papersize default
-\use_geometry false
+\papersize a4paper
+\use_geometry true
 \use_package amsmath 1
 \use_package amssymb 1
 \use_package cancel 1
@@ -90,6 +91,10 @@
 \shortcut idx
 \color #008000
 \end_index
+\leftmargin 2cm
+\topmargin 2cm
+\rightmargin 2cm
+\bottommargin 2cm
 \secnumdepth 3
 \tocdepth 3
 \paragraph_separation indent
@@ -183,11 +188,17 @@ Para testear la precisi
 
 \begin_layout Plain Layout
 
-$$V_c = 
+
+\backslash
+begin{equation} 
+\backslash
+label{eq:Vc} V_c = 
 \backslash
 frac{1}{sCR+1} 
 \backslash
-cdot V_{in}$$
+cdot V_{in} 
+\backslash
+end{equation}
 \end_layout
 
 \begin_layout Plain Layout
@@ -214,7 +225,9 @@ pi f$ y tomando m
 
 \begin_layout Plain Layout
 
-$$ C = 
+
+\backslash
+[ C = 
 \backslash
 frac{ 
 \backslash
@@ -224,7 +237,9 @@ abs{
 \backslash
 frac{V_{in}}{V_C}}^2 -1} }{2
 \backslash
-pi fR} $$
+pi fR} 
+\backslash
+]
 \end_layout
 
 \begin_layout Plain Layout
@@ -295,7 +310,7 @@ status open
 
 $
 \backslash
-abs{V_{in}}(V)$
+abs{V_{in}} (V)$
 \end_layout
 
 \end_inset
@@ -314,7 +329,7 @@ status open
 
 \begin_layout Plain Layout
 
-$|V_C|(V)$
+$|V_C| (V)$
 \end_layout
 
 \end_inset
@@ -328,7 +343,7 @@ $|V_C|(V)$
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $R(\Omega)$
+\begin_inset Formula $R(k\Omega)$
 \end_inset
 
 
@@ -343,7 +358,7 @@ $|V_C|(V)$
 \begin_inset Formula $C$
 \end_inset
 
- calculado
+ calculado 
 \begin_inset Formula $(nF)$
 \end_inset
 
@@ -359,7 +374,7 @@ $|V_C|(V)$
 \begin_inset Formula $C$
 \end_inset
 
- medido
+ medido 
 \begin_inset Formula $(nF)$
 \end_inset
 
@@ -466,7 +481,7 @@ te
 \uwave off
 \noun off
 \color none
-5,600
+5.600
 \end_layout
 
 \end_inset
@@ -594,7 +609,7 @@ te
 \uwave off
 \noun off
 \color none
-5,596
+5.596
 \end_layout
 
 \end_inset
@@ -750,6 +765,27 @@ La tabla anterior sugerir
 
 \begin_layout Subsection
 Pasa bajos
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+En primer lugar, se conect
+\backslash
+'o el circuito en su configuraci
+\backslash
+'on pasabajos, es decir tomando la tensi
+\backslash
+'on de salida como la que cae en el capacitor, de acuerdo a lo ilustrado
+ por el siguiente esquema:
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -973,6 +1009,463 @@ circuito RC pasabajos
 \end_inset
 
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsubsection
+Fase de 
+\begin_inset Formula $V_{C}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+Habiendo determinado emp
+\backslash
+'iricamente la frecuencia de corte como $24.3kHz$, de acuerdo a lo explicado
+ en la secci
+\backslash
+'on anterior, se procedi
+\backslash
+'o a medir la fase entre la tensi
+\backslash
+'on en el capacitor y la corriente en el mismo, para verificar qu
+\backslash
+'e tanto se ajusta el modelo puramente capacitivo para este componente.
+\backslash
+par
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+Como la corriente que circula por la resistencia es la misma que la que
+ queremos medir, y este elemento no produce un desfasaje de corriente apreciable
+ (el analizador de impedancias indicaba una fase de $-0.003^
+\backslash
+circ$), en lugar de medirse la fase entre $V_C$ e $i$, se midi
+\backslash
+'o entre $V_C$ y $V_R$ utilizando el osciloscopio.
+ Sin embargo, para medir de esta forma tambi
+\backslash
+'en hubo que tener otras consideraciones, a saber: debido a que las tierras
+ de los distintos canales de este instrumento est
+\backslash
+'an conectadas entre s
+\backslash
+'i, si se conectase una punta a $V_R$ y otra a $V_C$, se producir
+\backslash
+'ia un cortocircuito que anular
+\backslash
+'ia los efectos del capacitor.
+ Por lo tanto, para obtener la tensi
+\backslash
+'on en la resistencia se midi
+\backslash
+'o la tensi
+\backslash
+'on de entrada y se utiliz
+\backslash
+'o la funci
+\backslash
+'on de resta de canales del osciloscopio, finalmente obteniendo $V_R$ como
+ $V_{in}-V_C$.
+\end_layout
+
+\begin_layout Plain Layout
+
+Se obtuvo entonces la siguiente medici
+\backslash
+'on:
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename fotos/labo_tp1_ej1_fase.png
+	scale 40
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+fase entre $V_C$ e $i$
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsubsection
+Respuesta en frecuencia
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+A partir de la ecuaci
+\backslash
+'on 
+\backslash
+ref{eq:Vc}, podemos despejar la funci
+\backslash
+'on transferencia $H(s) = 
+\backslash
+frac{V_c}{V_{in}}$, de lo cual reacomodando los coeficientes para mayor
+ claridad se obtiene:
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{equation} 
+\backslash
+label{eq:Hpb}H(s) = 
+\backslash
+frac{1}{
+\backslash
+frac{s}{
+\backslash
+left(
+\backslash
+frac{1}{RC}
+\backslash
+right)}+1} 
+\backslash
+end{equation}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+Como esta ecuaci
+\backslash
+'on corresponde a un sistema BIBO-estable, para obtener la respuesta en
+ frecuencia del circuito basta evaluar en $s = i2
+\backslash
+pi f$.
+ Resulta entonces que este circuito tiene un polo simple en $
+\backslash
+omega_p = 2
+\backslash
+pi f_p = 
+\backslash
+frac{1}{RC}$, de lo cual reemplazando por los valores medidos en el analizador
+ de impedancias se obtiene que, anal
+\backslash
+'iticamente, la frecuencia de corte es $f_p 
+\backslash
+simeq 25kHz$.
+ Para $f
+\backslash
+ll f_p$, se esperar
+\backslash
+'ia que la se
+\backslash
+~nal no se aten
+\backslash
+'ue, pues a medida que $f$ se hace despreciable frente a $f_p$, $H(f)
+\backslash
+to 1$.
+ A su vez, debido a que el circuito es de primer orden, se deber
+\backslash
+'ia obtener una atenuaci
+\backslash
+'on de $20dB$ por d
+\backslash
+'ecada para $f
+\backslash
+gg f_p$, y como ya se mencion
+\backslash
+'o previamente, $
+\backslash
+abs{H(f_p)}=-3dB$.
+\backslash
+par
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+Respecto de la fase, deber
+\backslash
+'ia observarse que 
+\backslash
+phase{H(f)} comience en $0^
+\backslash
+circ$ para frecuencias bajas, sea $45^
+\backslash
+circ$ en $f_p$ y se estabilice en $90^
+\backslash
+circ$, siguiendo el comportamiento de la funci
+\backslash
+'on arcotangente en las transiciones.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Midiendo la 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+tensi
+\backslash
+'on
+\end_layout
+
+\end_inset
+
+ pico a pico en la entrada y en el capacitor, as
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+'i
+\end_layout
+
+\end_inset
+
+ como la fase entre ellas, a distintas frecuencias, se obtuvo el diagrama
+ de bode del circuito
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+Las mediciones se encuentran tabuladas en el anexo
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+.
+ Para compararlo con lo que esper
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+'
+\end_layout
+
+\end_inset
+
+abamos a partir del an
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+'a
+\end_layout
+
+\end_inset
+
+lisis te
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+'o
+\end_layout
+
+\end_inset
+
+rico se superpusieron los gr
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+'a
+\end_layout
+
+\end_inset
+
+ficos utilizando 
+\emph on
+Matlab
+\emph default
+:
+\end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename fotos/labo_tp1_ej1_bode_mag.png
+	scale 65
+
+\end_inset
+
+
+\begin_inset Graphics
+	filename fotos/labo_tp1_ej1_bode_fase.png
+	scale 65
+
+\end_inset
+
+E
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+diagrama de Bode del circuito RC pasabajos
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+Se observa que el modelo te
+\backslash
+'orico utilizado predice con una considerable precisi
+\backslash
+'on los resultados obtenidos experimentalmente.
+ Esto es especialmente cierto para frecuencias bajas, donde los gr
+\backslash
+'aficos se encuentran pr
+\backslash
+'acticamente superpuestos.
+ Sin embargo, a medida que la frecuencia aumenta (para frecuencias mayores
+ a $f_p$), las diferencias se hacen m
+\backslash
+'as apreciables, sobre todo en la fase.
+ Esto puede deberse a que la impedancia producto de las inductancias par
+\backslash
+'asitas presentes en el circuito (por ejemplo en las patitas de los componentes,
+ o inherentes al proceso de fabricaci
+\backslash
+'on de los mismos) se hacen menos despreciables al aumentar la frecuencia.
+ Asimismo, al aumentar la atenuaci
+\backslash
+'on, la tensi
+\backslash
+'on de salida se hace m
+\backslash
+'as peque
+\backslash
+~na y, por lo tanto, m
+\backslash
+'as susceptible a peque
+\backslash
+~nos ruidos externos.
 \end_layout
 
 \end_inset
