--- a/Informe/labo_tp1.lyx
+++ b/Informe/labo_tp1.lyx
@@ -134,6 +134,26 @@ filename "ej2/ej2.lyx"
 \begin_layout Standard
 \begin_inset CommandInset include
 LatexCommand input
+filename "ej3/ej3.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
+filename "ej4/ej4.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
 filename "labo_tp1_anexo.lyx"
 
 \end_inset
