Ej 3 y Ej  4 informe, faltan imágenes

--- a/Informe/ej3/ej3.lyx
+++ b/Informe/ej3/ej3.lyx
@@ -106,7 +106,164 @@
 
 \begin_body
 
+\begin_layout Section
+Análisis en frecuencia del RC mediante sweep del generador
+\end_layout
+
 \begin_layout Standard
+Se utilizará el barrido o sweep en frecuencia de un generador para visualizar
+ en el osciloscopio la respuesta en frecuencia gráficamente.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+par
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Para lograr el barrido en frecuencia, se utilizan dos generadores intercomunicad
+os entre sí.
+ Un generador (generador 1) se encargará de emitir la señal de trigger mediante
+ la cual se podrá observar claramente el barrido en el osciloscopio.
+ El segundo generador (generador 2) será el que efectivamente hará el barrido
+ en frecuencia, con un período de barrido de un valor igual o inferior al
+ período de la señal de trigger.
+ De esta manera, un sweep entero entrará dentro del intervalo temporal en
+ el que se observa un período de la señal de trigger.
+ Los dos generadores estarán sincronizados mendiante la salida sync del
+ generador 1 y la entrada externa del generador 2.
+ El generador 1 estará conectado directamente a un canal del osciloscopio,
+ mientras que la señal de entrada del circuto será la del barrido.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+par
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Dado que se obtuvo la frecuencia de corte del circuito RC pasabajos sobre
+ el cual se medirá la respuesta en frecuencia (valor cercano a 25kHz), entonces
+ se eligió un rango de frecuencias para el barrido tal que se cubran al
+ menos dos décadas antes y dos décadas despues de la fecuencia de corte,
+ para poder observar claramente los puntos característicos de la respuesta
+ en frecuencia del circuito.
+ Es por esto que se eligió barrer entre los 50Hz y los 500kHz.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+par
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Para la lectura en modo normal, se elige una frecuencia baja de trigger
+ para poder observar más detenidamente en el osciloscopio.
+ La frecuenca elegida fue de 100 Hz.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename Imágenes/ej3a.png
+	scale 140
+
+\end_inset
+
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Barrido en canal X con modo XY
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Para la lectura en modo normal, se recuerda que el gráfico del osiloscopio
+ será logarítmico en tiempo por como se configuró al barrido y en veces
+ para la amplitud.
+ Para la señal de barrido se eligió una señal rampa de trigger, de período
+ 100 milisegundos, con una entrada de tipo sweep de entre , con período
+ de barrido de 99 milisegundos, con barrido logarítimico en tiempo.
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename Imágenes/ej3b.png
+	scale 130
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Barrido en modo normal
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
 
 \end_layout
 
