--- a/Informe/labo_tp1.lyx
+++ b/Informe/labo_tp1.lyx
@@ -12,7 +12,6 @@
 \usepackage{steinmetz}
 \usepackage{mathtools}
 \usepackage{placeins}
-%\usepackage[textwidth=14cm]{geometry}	%texto ocupa mas ancho de pagina
 \usepackage{xcolor}		%se usa en \code
 
 \usepackage[american]{circuitikz}
@@ -40,6 +39,10 @@
 %al estilo del codigo de stack overflow
 \definecolor{light-gray}{gray}{0.95} 
 \newcommand{\code}[1]{\colorbox{light-gray}{\texttt{#1}}}
+
+\AtBeginDocument{\renewcommand\contentsname{Índice}}
+\AtBeginDocument{\renewcommand{\figurename}{Figura}}
+\AtBeginDocument{\renewcommand{\tablename}{Tabla}}
 \end_preamble
 \use_default_options true
 \maintain_unincluded_children false
@@ -62,9 +65,19 @@
 \output_sync 0
 \bibtex_command default
 \index_command default
+\float_placement H
 \paperfontsize default
 \spacing single
-\use_hyperref false
+\use_hyperref true
+\pdf_bookmarks true
+\pdf_bookmarksnumbered false
+\pdf_bookmarksopen false
+\pdf_bookmarksopenlevel 1
+\pdf_breaklinks false
+\pdf_pdfborder true
+\pdf_colorlinks false
+\pdf_backref false
+\pdf_pdfusetitle true
 \papersize default
 \use_geometry true
 \use_package amsmath 1
@@ -114,6 +127,46 @@
 \begin_layout Standard
 \begin_inset CommandInset include
 LatexCommand input
+filename "Caratula.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+tableofcontents
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
 filename "ej1/ej1.lyx"
 
 \end_inset
@@ -146,6 +199,13 @@ filename "ej3/ej3.lyx"
 LatexCommand input
 filename "ej4/ej4.lyx"
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
 \end_inset
 
 
