--- a/Informe/ej3/ej3.lyx
+++ b/Informe/ej3/ej3.lyx
@@ -181,9 +181,10 @@ par
 \end_layout
 
 \begin_layout Standard
-Para la lectura en modo normal, se elige una frecuencia baja de trigger
- para poder observar más detenidamente en el osciloscopio.
- La frecuenca elegida fue de 100 Hz.
+Para la lectura en modo X-Y, se elige una frecuencia baja de trigger para
+ poder observar más detenidamente en el osciloscopio.
+ La frecuenca elegida fue de 100 Hz y se ajustó al generador de la señal
+ de entrada de manera acorde.
 \end_layout
 
 \begin_layout Standard
@@ -220,11 +221,11 @@ Barrido en canal X con modo XY
 
 \begin_layout Standard
 Para la lectura en modo normal, se recuerda que el gráfico del osiloscopio
- será logarítmico en tiempo por como se configuró al barrido y en veces
+ será logarítmico en tiempo por cómo se configuró al barrido y en veces
  para la amplitud.
  Para la señal de barrido se eligió una señal rampa de trigger, de período
- 100 milisegundos, con una entrada de tipo sweep de entre , con período
- de barrido de 99 milisegundos, con barrido logarítimico en tiempo.
+ 100 milisegundos, con una entrada de tipo sweep de período de barrido de
+ 99 milisegundos, con barrido logarítimico en tiempo.
  
 \end_layout
 
@@ -258,13 +259,15 @@ Barrido en modo normal
 
 \end_layout
 
-\begin_layout Plain Layout
-
-\end_layout
-
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+Se logra apreciar un gráfico de un filtro de tipo pasabajos, en el que se
+ atenúan claramente las frecuencias altas.
+ 
 \end_layout
 
 \end_body
