--- a/Informe/ej1/ej1.lyx
+++ b/Informe/ej1/ej1.lyx
@@ -1537,6 +1537,7 @@ Matlab
 \end_layout
 
 \begin_layout Standard
+\noindent
 \align center
 \begin_inset Float figure
 placement H
@@ -1558,7 +1559,7 @@ status open
 
 \end_inset
 
-E
+
 \end_layout
 
 \begin_layout Plain Layout
