--- a/Informe/ej2/ej2.lyx
+++ b/Informe/ej2/ej2.lyx
@@ -430,7 +430,9 @@ end{equation}
 
 \begin_layout Plain Layout
 
-Finalmente operando alegraicamente se obtiene la transeferencia del circuito
+Finalmente operando alegr
+\backslash
+'aicamente se obtiene la transeferencia del circuito
 \end_layout
 
 \begin_layout Plain Layout
